<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSearchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_search"
            android:textAlignment="center"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top_title_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvSearchText" />

        <TextView
            android:id="@+id/tvSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title_text_info"
            android:layout_marginStart="@dimen/margin_small_default"
            android:layout_marginEnd="@dimen/margin_small_default"
            android:text="@string/text_search"
            android:textSize="@dimen/text_size_info"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSearchTitle"
            app:layout_constraintBottom_toTopOf="@id/tilSearchMunicipio"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearchMunicipio"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginStart="@dimen/margin_small_default"
            android:layout_marginEnd="@dimen/margin_small_default"
            app:layout_constraintTop_toBottomOf="@id/tvSearchText"
            app:layout_constraintBottom_toTopOf="@id/btSearchSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/icon_city">

            <AutoCompleteTextView
                android:id="@+id/actvMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_municipio"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btSearchSearch"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilSearchMunicipio"
            app:layout_constraintBottom_toTopOf="@id/btBackSearch"
            android:layout_marginTop="@dimen/margin_top_generate_button"
            android:layout_marginStart="@dimen/margin_small_default"
            android:layout_marginEnd="@dimen/margin_small_default"
            android:text="@string/search"
            android:textStyle="bold"
            android:textSize="@dimen/button_text"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_red"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btBackSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_top_default"
            android:backgroundTint="@color/dark_red"
            android:contentDescription="@string/bt_back"
            android:text="@string/back"
            android:textColor="@color/white"
            app:icon="@drawable/icon_arrow_back"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btSearchSearch" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>